lib/igt_crc: Remove crc32 table from common section

I've incidentally put crc32 table definition to the header file
instead of exporting it via extern keyword. Remove this symbol
from common section to be C89 conformant.

Signed-off-by: Zbigniew Kempczyński <zbigniew.kempczynski@intel.com>
Cc: Petri Latvala <petri.latvala@intel.com>
Cc: Kamil Konieczny <kamil.konieczny@linux.intel.com>
Fixes: https://gitlab.freedesktop.org/drm/igt-gpu-tools/-/issues/126
Reviewed-by: Petri Latvala <petri.latvala@intel.com>